tienda y productos prueba en js

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -23,7 +23,7 @@
                     <li class="menu__item"><a href="#">Beneficios</a></li>
                     <li class="menu__item"><a href="#">Galería</a></li>
                     <li class="menu__item"><a href="#">Más vendido</a></li>
-                    <li class="menu__item"><a href="#">Interacción</a></li>
+                    <li class="menu__item"><a href="/tienda">Tienda</a></li>
                     <li class="menu__item"><a href="#">Contáctenos</a></li>
                     <li class="menu__item"><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars fa-lg"></i></a></li>
                 </ul>
