--- a/views/tienda.handlebars
+++ b/views/tienda.handlebars
@@ -1,20 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Productos vista normi</title>
+    <title>Document</title>
 </head>
-
 <body>
-    <ul class="menu__list">
-        <li class="menu__item"><a href="/tienda/promociones">Promociones</a></li>
-        <li class="menu__item"><a href="/tienda/nuevo">Nuevo</a></li>
-        <li class="menu__item"><a href="/tienda/destacado">Desctacado</a></li>
-        <li class="menu__item"><a href="/tienda">Ver todo</a></li>
-    </ul>
+     <header class="ppal">
+        <section class="menu">
+            <img src="img/logo.png" class="menu__logo">
+            <nav class="menu__nav" id="nav">
+                <ul class="menu__list">
+                    <li class="menu__item"><a href="#">Beneficios</a></li>
+                    <li class="menu__item"><a href="#">Galería</a></li>
+                    <li class="menu__item"><a href="#">Más vendido</a></li>
+                    <li class="menu__item"><a href="/tienda">Tienda</a></li>
+                    <li class="menu__item"><a href="#">Contáctenos</a></li>
+                    <li class="menu__item"><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars fa-lg"></i></a></li>
+                </ul>
+            </nav>
+        </section>
+        
+        <section class="banner"></section>
+    </header>
+    
+    <div class="benefit">
+        <p class="benefit__desc">Ofrecemos una alta gama de productos de arte y diseño. Además, nuestra tienda tiene varias ventajas.</p>
+        
+        <div class="benefit__feature">
+            <article class="feature">
+                <section>
+                    <img src="img/beneficio1.png" class="feature__img">
+                </section>
+                <section class="feature__info">
+                    <p class="feature__title">Mejor calidad</p>
+                    <p class="feature__desc">Tenemos las marcas más conocidas mundialmente.</p>
+                </section>
+            </article>
+            
+            <article class="feature">
+                <section>
+                    <img src="img/beneficio2.png" class="feature__img">
+                </section>
+                <section class="feature__info">
+                    <p class="feature__title">Modernización</p>
+                    <p class="feature__desc">Ofrecemos un almacen virtual adaptandonos a la era tecnológica.</p>
+                </section>
+            </article>
+            
+            <article class="feature">
+                <section>
+                    <img src="img/beneficio3.png" class="feature__img">
+                </section>
+                <section class="feature__info">
+                    <p class="feature__title">Variedad</p>
+                    <p class="feature__desc">Tenemos especialistas en arte para brindar multiples servicios.</p>
+                </section>
+            </article>
+        </div>
+    </div>
 </body>
-
 </html>
