--- a/public/styles/tienda.scss
+++ b/public/styles/tienda.scss
@@ -1,4 +1,6 @@
-$color-acuamarine: #018D72;
+$color-orange: #ee8d1f;
+$color-light-orange: #fff6ed;
+$color-blue: #00a7bd;
 
 body{
     margin: 0;
@@ -50,64 +52,161 @@ body{
     }
     
     &__item a:hover {
-        color:$color-violet;
+        color:#018D72;
+    }
+}
+
+.carrito{
+    width: 10vh;
+    height: 30vh;
+    background: black;
+    position: fixed;
+    
+    
+    &__items{
+        color: white;
     }
 }
 
 .banner{
     width: 100%;
-    height: 80vh;
-    text-align: center;
-    background-image: url('../img/art_banner.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    height: 120vh;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    
+    &__orange{
+        width: 60%;
+        height: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: $color-orange;
+        margin-left: 25%;
+    }
+    
+    &__blue{
+        width: 60%;
+        height: 90%;
+        margin-left: 15%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: $color-blue;
+        text-align: center;
+        //background-image: url('../img/touch.jpg');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
 }
 
-.benefit{
+.info{
+    width: 100%;
+    height: 60vh;
     display: flex;
     flex-direction: column;
-    flex-basis: 600px;
+    justify-content: center;
+    align-items: center;
+    background: $color-light-orange;
+    
+    &__title {
+        background: rebeccapurple;
+        margin: 0;
+        padding: 0.2em;
+        font-family: 'Homemade Apple', cursive;
+        color: white;
+    }
+    
+    &__desc{
+        background: #d78c2f;
+        margin: 0;
+        padding: 0.4em;
+        text-align: center;
+        color: white;
+    }     
+}
+
+.productos{
+    width: 80%;
+    height: 60vh;
+    margin: auto;
+    background: lightblue;
+    
+    &__title{
+        font-family: 'Homemade Apple', cursive;
+        text-align: center;
+        color: black;
+    }
+}
+
+.filtro{
+    display: flex;
+    height: 5%;;
+    flex-basis: 5%;
     flex-grow: 0;
     flex-shrink: 0;
     align-items: center;
-    background: $color-violet;
+    font-size: 17px;
+    position: absolute;
     
-    &__desc{
-        margin: 2em 2em 0 2em;
-        max-width: 1000px;
-        padding: 2em;
-        text-align: center;
-        color: white;
+    &__list{
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        color: #00a7bd; 
     }
     
-    &__feature {
-        display: flex;
-        margin: 2em;
-        justify-content: center;
-        align-items: center;
+    &__item{
+        float: left;
+        padding: 0 1em 0 1em;
+    }
+    
+    &__item a{
+        display: block;
+        color: black;
+        text-align: center;
+        
+        text-decoration: none;
+    }
+    
+    &__item a:hover {
+        //poner la linea de encima
     }
 }
 
-.feature{
-    width: 14%;
-    margin: 0 50px 0 50px;
+.contenedor{
+    display: flex;
+    flex-basis: 100%;
+    width: 100%;
+    height: 100%;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-around;
+}
+
+.contenido{
+    display: flex;
+    flex-basis: 20%;
+    width: 20%;
+    height: 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: all .3s ease-in-out;
     
-    &__img {
-        background-size: cover;
-        background-repeat: no-repeat;
-        height: 160px;
+    &:hover{
+        box-shadow: 8px 8px 10px 0px rgba(230,230,230,1);
+        cursor: pointer;
     }
     
-    &__title{
-        color: white;
-        text-align: center;
-        font-family: 'Homemade Apple', cursive;
-        font-size: 18px;
-    }
-    
-    &__info {
-        color: white;
-        text-align: center;
+    & p{
+        background: rgba(0, 0, 0, 0.5);
+        color: aliceblue;
+        width: 100%;
+        padding: 0.5em;
+        margin: 0;
+        align-self: flex-end;
     }
 }
