--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -20,11 +20,11 @@
             <img src="img/logo.png" class="menu__logo">
             <nav class="menu__nav" id="nav">
                 <ul class="menu__list">
-                    <li class="menu__item"><a href="#">Beneficios</a></li>
-                    <li class="menu__item"><a href="#">Galería</a></li>
-                    <li class="menu__item"><a href="#">Más vendido</a></li>
+                    <li class="menu__item"><a href="/diseño">Diseño</a></li>
+                    <li class="menu__item"><a href="/arquitectura">Arquitectura</a></li>
+                    <li class="menu__item"><a href="">Más vendido</a></li>
                     <li class="menu__item"><a href="/tienda">Tienda</a></li>
-                    <li class="menu__item"><a href="#">Contáctenos</a></li>
+                    <li class="menu__item"><a href="/contactenos">Contáctenos</a></li>
                     <li class="menu__item"><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars fa-lg"></i></a></li>
                 </ul>
             </nav>
