Conexión a mongo y documentos de la bd

--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -3,6 +3,7 @@ $color-violet: #5632AC;
 $color-orange: #F57420;
 $color-orange-press: rgb(235, 97, 5);
 $color-acuamarine: #018D72;
+$color-blue: #00a7bd;
 
 body{
     margin: 0;
@@ -40,6 +41,12 @@ body{
         float: left;
         padding: 0 3em 0 3em;
     }
+
+    &__item-tienda{
+        float: left;
+        color: $color-blue;
+        padding: 0 3em 0 3em;
+    }
     
     &__item .icon{
         display: none;
@@ -49,7 +56,7 @@ body{
         display: block;
         color: black;
         text-align: center;
-        padding: 1.5em;
+        padding: 0.5em;
         text-decoration: none;
     }
     
@@ -75,7 +82,7 @@ body{
     flex-grow: 0;
     flex-shrink: 0;
     align-items: center;
-    background: $color-violet;
+    background: $color-blue;
     
     &__desc{
         margin: 2em 2em 0 2em;
@@ -91,6 +98,8 @@ body{
         justify-content: center;
         align-items: center;
     }
+
+
 }
 
 .feature{
@@ -113,6 +122,19 @@ body{
     &__info {
         color: white;
         text-align: center;
+    }
+
+    &__arts{
+        color: white;
+        margin: 0;
+        letter-spacing: 10px;
+    }
+
+    &__artsd{
+        color: white;
+        margin: 0;
+        letter-spacing: 10px;
+        text-align: right;
     }
 }
 
