--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -20,11 +20,12 @@
             <img src="img/logo.png" class="menu__logo">
             <nav class="menu__nav" id="nav">
                 <ul class="menu__list">
-                    <li class="menu__item"><a href="/diseño">Diseño</a></li>
-                    <li class="menu__item"><a href="/arquitectura">Arquitectura</a></li>
-                    <li class="menu__item"><a href="">Más vendido</a></li>
-                    <li class="menu__item"><a href="/tienda">Tienda</a></li>
+                    <li class="menu__item"><a href="/beneficios">Beneficios</a></li>
+                    <li class="menu__item"><a href="/galeria">Galería</a></li>
+                    <li class="menu__item"><a href="/masvendido">Más vendido</a></li>
+                    <li class="menu__item"><a href="/interaccion">Interacción</a></li>
                     <li class="menu__item"><a href="/contactenos">Contáctenos</a></li>
+                    <li class="menu__item-tienda"><a href="/tienda">Tienda</a></li>
                     <li class="menu__item"><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars fa-lg"></i></a></li>
                 </ul>
             </nav>
@@ -35,8 +36,15 @@
     
     <div class="benefit">
         <p class="benefit__desc">Ofrecemos una alta gama de productos de arte y diseño. Además, nuestra tienda tiene varias ventajas.</p>
-        
+
         <div class="benefit__feature">
+            <article class="feature">
+                <p class="feature__arts">ARTS </p>
+                <p class="feature__arts">ART</p>
+                <p class="feature__arts">AR</p>
+                <p class="feature__arts">A</p>
+            </article>
+
             <article class="feature">
                 <section>
                     <img src="img/beneficio1.png" class="feature__img">
@@ -65,6 +73,13 @@
                     <p class="feature__title">Variedad</p>
                     <p class="feature__desc">Tenemos especialistas en arte para brindar multiples servicios.</p>
                 </section>
+            </article>
+
+            <article class="feature">
+                <p class="feature__artsd">A</p>
+                <p class="feature__artsd">AR</p>
+                <p class="feature__artsd">ART</p>
+                <p class="feature__artsd">ARTS </p>
             </article>
         </div>
     </div>
