--- a/public/styles/tienda.scss
+++ b/public/styles/tienda.scss
@@ -58,13 +58,16 @@ body{
 
 .carrito{
     width: 10vh;
-    height: 30vh;
+    height: 15vh;
     background: black;
     position: fixed;
+    margin-top: 350px;
+    right: 0%;
     
     
     &__items{
         color: white;
+        text-align: center;
     }
 }
 
@@ -74,6 +77,13 @@ body{
     display: flex;
     align-items: flex-end;
     justify-content: center;
+    
+    &__arts{
+        color: white;
+        margin: 0;
+        letter-spacing: 10px;
+        text-align: left;
+    }
     
     &__orange{
         width: 60%;
@@ -129,7 +139,7 @@ body{
 
 .productos{
     width: 80%;
-    height: 60vh;
+    height: 150px;
     margin: auto;
     background: lightblue;
     
@@ -142,71 +152,72 @@ body{
 
 .filtro{
     display: flex;
-    height: 5%;;
-    flex-basis: 5%;
-    flex-grow: 0;
-    flex-shrink: 0;
+    height: 50px;
     align-items: center;
-    font-size: 17px;
+    font-size: 15px;
     position: absolute;
+    background: #d78c2f;
     
     &__list{
         list-style-type: none;
         margin: 0;
         padding: 0;
         overflow: hidden;
-        color: #00a7bd; 
     }
     
     &__item{
         float: left;
-        padding: 0 1em 0 1em;
+        padding: 0 1.5em 0 1.5em;
+    }
+
+    &__first{
+        padding: 0;
     }
     
     &__item a{
         display: block;
         color: black;
         text-align: center;
-        
+        padding: 0.5em;
         text-decoration: none;
     }
     
     &__item a:hover {
-        //poner la linea de encima
+        color: #d78c2f;
     }
 }
 
 .contenedor{
     display: flex;
     flex-basis: 100%;
-    width: 100%;
-    height: 100%;
+    margin: auto;
+    width: 80%;
+    height: 80vh;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: space-around;
+    justify-content: space-around;
+    align-content: stretch;
+    background: #00a7bd;
 }
 
 .contenido{
     display: flex;
     flex-basis: 20%;
     width: 20%;
-    height: 50%;
+    height: 40%;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     transition: all .3s ease-in-out;
+    flex-grow: 1;
+
+    &__largo{
+        flex-grow: 3;
+    }
     
     &:hover{
-        box-shadow: 8px 8px 10px 0px rgba(230,230,230,1);
+        //box-shadow: 8px 8px 10px 0px rgba(230,230,230,1);
         cursor: pointer;
     }
-    
-    & p{
-        background: rgba(0, 0, 0, 0.5);
-        color: aliceblue;
-        width: 100%;
-        padding: 0.5em;
-        margin: 0;
-        align-self: flex-end;
-    }
 }
+
+
