--- a/views/tienda.handlebars
+++ b/views/tienda.handlebars
@@ -77,8 +77,7 @@
                 <li class="filtro__item"><a href="/tienda">VER TODO</a></li>
             </ul>
         </div>
-    
-
+    </section>
 
     <!--mi lista-->
     <section class="contenedor">
@@ -88,12 +87,12 @@
                 <img class="item-img" src="{{imagen}}" width="200px">
                 <h3 class="item-nombre">{{nombre}}</h3>
                 <p class="item-precio">{{precio}}</p>
-                <p>{{categoria}}</p>
+                <p class="item-c">{{categoria}}</p>
             </li>
             {{/each}}
         </ul>
     </section>
-</section>
+
 </body>
 
 </html>
