--- a/public/styles/tienda.scss
+++ b/public/styles/tienda.scss
@@ -173,7 +173,7 @@ body{
     width: 80%;
     height: 150px;
     margin: auto;
-    background: lightblue;
+    //background: lightblue;
     
     &__title{
         font-family: 'Homemade Apple', cursive;
@@ -220,7 +220,7 @@ body{
 }
 
 .contenedor{
-    width: 100%;
+    width: 80%;
     height: 100%;
     margin: auto;
     
@@ -230,24 +230,40 @@ body{
         flex-wrap: wrap;
         justify-content: space-between;
         margin: -0.5em;
-        
         padding: 0;
-        background: #fff6ed;
+        //background: #fff6ed;
         
         &-item{
+            width: 250px;
+            height: 250px;
             list-style-type: none;
+            border: solid #00a7bd;
+            margin: 0.4em;
         }
     }
 }
 
 .item{
+    &-img{
+        padding: 1.5em;
+    }
+
     &-nombre{
         text-align: center;
         font-size: 15px;
+        padding: 0.2em;
+        background: #00a7bd;
     }
 
     &-precio{
+        text-align: center;
         font-size: 14px;
+        background: #d78c2f;
+    }
+
+    //Borrar esto luguito------
+    &-c{
+        font-size: 9px;
     }
 }
 
