Carrito de compras sin estilos

--- a/views/tienda.handlebars
+++ b/views/tienda.handlebars
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--fonts-->
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Homemade+Apple" rel="stylesheet">
 
+    <!--icono-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
@@ -30,36 +32,37 @@
                 </div>
             </nav>
         </section>
+    </header>
 
-        <article class="carrito">
-            <h4 class="carrito__items"> 0 </h4>
-            <!--img del carrito-->
-        </article>
+    <article class="carrito">
+        <h4 class="carrito__items"> 0 </h4>
+        <!--img del carrito-->
+    </article>
 
-        <section class="banner">
-            <div class="banner__orange">
+    <section class="banner">
+        <div class="banner__orange">
+            <article>
+                <p class="banner__arts banner__arts-a">A</p>
+                <p class="banner__arts banner__arts-a">AR</p>
+                <p class="banner__arts banner__arts-a">ART</p>
+                <p class="banner__arts banner__arts-a">ARTS </p>
+            </article>
+
+            <div class="banner__blue">
                 <article>
-                    <p class="banner__arts banner__arts-a">A</p>
-                    <p class="banner__arts banner__arts-a">AR</p>
-                    <p class="banner__arts banner__arts-a">ART</p>
-                    <p class="banner__arts banner__arts-a">ARTS </p>
+                    <p class="banner__arts banner__arts-b ">ARTS </p>
+                    <p class="banner__arts banner__arts-b">ART</p>
+                    <p class="banner__arts banner__arts-b">AR</p>
+                    <p class="banner__arts banner__arts-b">A</p>
                 </article>
 
-                <div class="banner__blue">
-                    <article>
-                        <p class="banner__arts banner__arts-b ">ARTS </p>
-                        <p class="banner__arts banner__arts-b">ART</p>
-                        <p class="banner__arts banner__arts-b">AR</p>
-                        <p class="banner__arts banner__arts-b">A</p>
-                    </article>
-
-                    <div class="banner__img">
-                        <img src="{{productoC.imagen}}" alt="">
-                    </div>
+                <div class="banner__img">
+                    <img src="{{productoC.imagen}}" alt="">
                 </div>
             </div>
-        </section>
-    </header>
+        </div>
+    </section>
+
 
     <section class="info">
         <h2 class="info__title">Titulo</h2>
