--- a/public/styles/carrito.scss
+++ b/public/styles/carrito.scss
@@ -18,9 +18,12 @@ body{
     font-size: 17px;
     font-weight: bold;
     position: absolute;
+    // background: rgba(255, 255, 255, 0.8);
+    //z-index: 10;
     
     &__logo{
         width: 30%;
+        height: 60%;
         margin: 0;
         padding: .7em;
         margin-left: 2em;      
@@ -35,7 +38,7 @@ body{
         padding: 0.8em;
         position: absolute;
         left: 210%;
-        top: 0%;
+        top: -30%;
         
         &__icono {
             
@@ -49,7 +52,7 @@ body{
     &-sesion {
         position: absolute;
         left: 240%;
-        top: 0%; 
+        top: -11%; 
         
         &__texto {
             font: black;
@@ -58,13 +61,110 @@ body{
     
 }
 
+.encabezado{
+    width: 90%;
+    margin: auto;
+
+    background: #00a7bd;
+    
+    &__titulo{
+        text-align: center;
+    }
+    
+    &__continuar{
+        text-align: end;
+    }
+}
+
+.carrito{
+    width: 90%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    
+    &__productos{
+        width: 70%;
+    }
+    
+    &__resumen{
+        width: 30%;
+        
+        &-titulo{
+            
+        }
+        
+        &-subtotal{
+            
+        }
+        
+        &-envio{
+            
+        }
+        
+        &-total{
+            
+        }
+    }
+}
+
+.pago-sin{
+    width: 100%;
+    height: 35vh;
+    display: flex;
+    flex-direction: column;
+    //justify-content: center;
+    //align-items: center;
+    background: #00a7bd;
+    
+    &__info{
+        padding: 1em;
+        width: 80%;
+        //background: #fff6ed;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    &__btn{
+        width: 60%;
+    }
+}
+
+label{
+    padding: 0.5em;
+}
+
+.pago-con{
+    width: 100%;
+    height: 35vh;
+    display: flex;
+    flex-direction: column;
+    //justify-content: center;
+    //align-items: center;
+    background: #ee8d1f;
+
+    &__info{
+        padding: 1em;
+        width: 80%;
+        //background: #fff6ed;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    &__btn{
+        width: 60%;
+    }
+}
+
+
+
 .pie{
     width: 100%;
     height: 20vh;
     background: black;
-
+    
     &__logo{
         width: 30%;
+        height: 60%;
         margin: 0;
         padding: .7em;
         margin-left: 2em; 
@@ -73,24 +173,24 @@ body{
         display: flex;
         flex-direction: row;
     }
-
+    
     &-redes{
         display: flex;
         flex-direction: row;
     }
-
+    
     &-red{
         color: #fff6ed;
     }
-
+    
     &-linea{
         width: 90%;
         background: white;
     }
-
+    
     &-contacto{
         color: white;
     }
-
+    
 }
 
