--- a/views/producto.handlebars
+++ b/views/producto.handlebars
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/producto.css">
-    <title>Producto Abierto</title>
+    <title>Producto Detallado</title>
 </head>
 
 <body>
@@ -19,10 +19,11 @@
         <p>{{descripcion}}</p>
         {{else}}
         <!--Aqui va el diseño de ERROR-->
-
         <h1>{{error}}</h1>
         {{/if}}
         
     </section>
+
+    <script src="/scripts/producto.js"></script>
 </body>
 </html>
