--- a/views/producto.handlebars
+++ b/views/producto.handlebars
@@ -6,24 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/producto.css">
-    <title>Producto Detallado</title>
+    <title>Aiuda Detallado</title>
 </head>
 
 <body>
-    <section>
-        {{#if titulo}}
-        <!--Aqui va el diseño de PRODUCTO DETALLADO-->
+    <section class="vista-detallada">
+        <img src="/img/beneficio1.png" alt="" class="vista-detallada__img">
+        <section class="vista-detallada__info">
+            <div class="producto-detallado">
+                <h3 class="producto-detallado__nombre">Nombre</h3>
+                <label class="producto-detallado__label">Precio</label>
+                <p class="producto-detallado__precio">80000</p>
+            </div>
 
-        <h1>{{titulo}}</h1>
-        <h3>${{precio}}</h3>
-        <p>{{descripcion}}</p>
-        {{else}}
-        <!--Aqui va el diseño de ERROR-->
-        <h1>{{error}}</h1>
-        {{/if}}
-        
+            <div class="acciones">
+                <div class="acciones__cantidad">
+                    <p class="acciones__cantidad-nombre">Cantidad</p>
+                    <!--hacer el cuadro-->
+                </div>
+                <button class="acciones__btn">Agregar</button>
+            </div>
+
+            <p class="vista-detallada__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quas
+                recusandae dicta aut omnis dolore earum labore, explicabo aspernatur distinctio assumenda! Omnis
+                harum explicabo dolorum vero totam inventore quae tenetur!</p>
+        </section>
     </section>
 
-    <script src="/scripts/producto.js"></script>
 </body>
 </html>
