--- a/views/tienda.handlebars
+++ b/views/tienda.handlebars
@@ -24,8 +24,16 @@
             <img src="/img/logo.png" class="menu__logo">
             <nav class="menu__nav" id="nav">
                 <div class="menu-categoria">
-                    <i class="fas fa-ellipsis-h menu-categoria__icono"></i>
-                    <a class="menu-categoria__texto">Categoría</a>
+
+                    <button onclick="desplegar()" class="dropbtn"> <i
+                            class="fas fa-ellipsis-h menu-categoria__icono"></i>
+                        <a class="menu-categoria__texto">Categoría</a>
+                    </button>
+                    <div id="myDropdown" class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
                 </div>
                 <div class="menu-sesion">
                     <a class="menu-sesion__texto">Iniciar sesión</a>
@@ -87,7 +95,7 @@
         <ul class="contenedor__lista">
             {{#each productos}}
             <li class="contenedor__lista-item">
-                <a href="7tienda7producto/{{id}}">
+                <a href="/tienda/producto/{{_id}}">
                     <img class="item__img" src="{{imagen}}" width="200px">
                     <h3 class="item__nombre">{{nombre}}</h3>
                     <p class="item__precio">{{precio}}</p>
