--- a/public/styles/tienda.scss
+++ b/public/styles/tienda.scss
@@ -248,20 +248,20 @@ body{
     &__img{
         padding: 1.5em;
     }
-
+    
     &__nombre{
         text-align: center;
         font-size: 15px;
         padding: 0.2em;
         background: #00a7bd;
     }
-
+    
     &__precio{
         text-align: center;
         font-size: 14px;
         background: #d78c2f;
     }
-
+    
     //Borrar esto luguito------
     &__c{
         font-size: 9px;
@@ -273,4 +273,46 @@ body{
     // cursor: pointer;
     // }
     
+    .dropbtn {
+        background-color: #3498DB;
+        color: white;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+    }
     
+    /* Dropdown button on hover & focus */
+    .dropbtn:hover, .dropbtn:focus {
+        background-color: #2980B9;
+    }
+    
+    /* The container <div> - needed to position the dropdown content */
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+    
+    /* Dropdown Content (Hidden by Default) */
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+    
+    /* Links inside the dropdown */
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+    
+    /* Change color of dropdown links on hover */
+    .dropdown-content a:hover {background-color: #ddd}
+    
+    /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+    .show {display:block;}
