--- a/public/styles/carrito.scss
+++ b/public/styles/carrito.scss
@@ -64,7 +64,7 @@ body{
 .encabezado{
     width: 90%;
     margin: auto;
-
+    
     background: #00a7bd;
     
     &__titulo{
@@ -88,6 +88,8 @@ body{
     
     &__resumen{
         width: 30%;
+        border: solid 1px rgba(0, 0, 0, 0.2);
+        padding: 1.5em;
         
         &-titulo{
             
@@ -107,6 +109,54 @@ body{
     }
 }
 
+
+.producto{
+    
+    &__contenedor{
+        width: 90%;
+        //border: solid 1px rgba(0, 0, 0, 0.2);
+        padding: 1.5em;
+        display: flex;
+        background: #00a7bd;
+    }
+    
+    &__img{
+        background: #ee8d1f;
+        width: 200px;
+        height: 200px;
+        margin-right: 5%;
+    }
+    
+    &__contenido{
+        width: 60%;
+        
+        background: #ee8d1f;
+    }
+    
+    &__nombre{
+        font-size: 20px;
+        padding: 0.5em 0 0.5em 0;
+        color: rebeccapurple;
+        background: #00a7bd;
+    }
+    
+    &__tipo{
+        font-size: 12px;
+        margin: 0;
+        padding: 0.1em;
+        
+        color: pink;
+        background: #00a7bd;
+    }
+    
+    &__precio{
+        font-size: 15px;
+        color: red;
+    }    
+}
+
+
+
 .pago-sin{
     width: 100%;
     height: 35vh;
@@ -114,7 +164,11 @@ body{
     flex-direction: column;
     //justify-content: center;
     //align-items: center;
-    background: #00a7bd;
+    margin-top: 5%;
+    background: #fcfcfc;
+    -webkit-box-shadow: 9px 9px 10px -3px rgba(0,0,0,0.2);
+    -moz-box-shadow: 9px 9px 10px -3px rgba(0,0,0,0.2);
+    box-shadow: 9px 9px 10px -3px rgba(0,0,0,0.2);
     
     &__info{
         padding: 1em;
@@ -140,8 +194,12 @@ label{
     flex-direction: column;
     //justify-content: center;
     //align-items: center;
-    background: #ee8d1f;
-
+    margin-top: 10%;
+    background: #fcfcfc;
+    -webkit-box-shadow: 9px 9px 10px -3px rgba(0,0,0,0.2);
+    -moz-box-shadow: 9px 9px 10px -3px rgba(0,0,0,0.2);
+    box-shadow: 9px 9px 10px -3px rgba(0,0,0,0.2);
+    
     &__info{
         padding: 1em;
         width: 80%;
@@ -158,20 +216,34 @@ label{
 
 
 .pie{
-    width: 100%;
-    height: 20vh;
+    display: flex;
+    height: 100px;
+    flex-basis: 68px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-direction: column;
+    //width: 100%;
+    //height: 20vh;
+    margin-top: 5%;
     background: black;
+    
+    &-a{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        background: #00a7bd;
+        
+        flex-grow: 0;
+        flex-shrink: 0;
+    }
     
     &__logo{
         width: 30%;
         height: 60%;
         margin: 0;
-        padding: .7em;
-        margin-left: 2em; 
-    }
-    &-a{
-        display: flex;
-        flex-direction: row;
+        padding: 0.7em;
+        margin-left: 40%; 
     }
     
     &-redes{
@@ -179,9 +251,10 @@ label{
         flex-direction: row;
     }
     
-    &-red{
-        color: #fff6ed;
+    &__red-icono{
+        color: rebeccapurple;
     }
+    
     
     &-linea{
         width: 90%;
@@ -189,8 +262,9 @@ label{
     }
     
     &-contacto{
-        color: white;
-    }
-    
+        color: red;
+        margin-left: 5%;
+        padding: 1em;
+    }  
 }
 
